[package]
name = "pod-babashka-filewatcher"
version = "0.0.1-SNAPSHOT"
authors = ["Michiel Borkent <michielborkent@gmail.com>"]
repository = "https://github.com/babashka/pod-babashka-filewatcher/"
description = "A babashka pod for watching files"
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[main]
proc-macro = true

[dependencies]
notify = "4.0.12"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
bencode_rs = { git = "https://github.com/jasilven/bencode_rs", tag = "v0.1.0" }
